website/static/website/css/news.css
.news_image{
    float: left;
    padding-right: 0px;
    padding-bottom: 0px;
    vertical-align: top;
}

.news_content{
   
}

.news-well p {
    margin: 5px;
}


/**
 * https://css-tricks.com/line-clampin/ relevant to text wrapping
 */

.line-clamp{
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient:vertical;
}

.news_info{
    padding-left: 50px;
    padding-top: 0px;
    width: 100%
}

.news_title{
    font-weight: bold;
    font-size: 17px;
    padding-top: 0px;
    padding-left: 0px;
    padding-bottom: 0px;
    margin: 0 auto;
    line-height: 100%
    width: 100%;
    overflow: hidden;
}

.news_date{
    padding-top: 0px;
    font-size: 10px;
    padding-left: 0px;
    padding-bottom: 0px;
    line-height: 100%;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.news_header{
    padding-bottom: 0px;
}

.news_body{
    padding-bottom: 20px
}

.news-type-label {
    text-align: left;
    margin: 0 auto;
}

